force-app/main/default/objects/Service_Center__c/Service_Center__c.object-meta.xml
<CustomObject>
    <description>QES Service Centers</description>
    <label>Service Center</label>
    <nameField>
        <label>Service Center</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>