force-app/main/default/objects/Service_Center__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>