force-app/main/default/objects/Service_Center__c/fields/Canadian_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canadian Authorized</label>
    <type>Checkbox</type>
</CustomField>