force-app/main/default/objects/Service_Center__c/fields/Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operation__c</fullName>
    <label>Hours of Operation</label>
    <type>TextArea</type>
</CustomField>