force-app/main/default/objects/Service_Center__c/fields/lat__c.field-meta.xml
<CustomField>
    <fullName>lat__c</fullName>
    <description>Latitude for mapping</description>
    <label>Latitude</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>