force-app/main/default/objects/Service_Center__c/fields/lon__c.field-meta.xml
<CustomField>
    <fullName>lon__c</fullName>
    <description>Longitude for mapping</description>
    <label>Longitude</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>