force-app/main/default/objects/Service_Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Contact__c</columns>
    <columns>Phone__c</columns>
    <columns>Secondary_Phone__c</columns>
    <columns>Hours_of_Operation__c</columns>
    <columns>Canadian_Authorized__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>